docs: fix spacing

--- a/docs/.vuepress/styles/overrides.less
+++ b/docs/.vuepress/styles/overrides.less
@@ -15,7 +15,7 @@ body {
 }
 
 .page {
-  padding-top: 0;
+  padding-top: var(--navbar-height);
   padding-left: var(--sidebar-width) ;
 }
 
@@ -53,7 +53,9 @@ body {
 
 @media screen and (max-width: 719px) {
   .page {
-    padding: 0 !important;
+    padding-right: 0 !important;
+    padding-left: 0 !important;
+    padding-bottom: 0 !important;
   }
 }
 
